--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=9999
+#清除浏览器缓存
+spring.thymeleaf.cache=false
 #配置网页的访问路径
 #server.servlet.context-path=/test
 spring.messages.basename=i18n.login
