--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 server.port=9999
 #清除浏览器缓存
 spring.thymeleaf.cache=false
+#日期格式化修改
+#spring.mvc.format.date=dd-MM-yyyy
 #配置网页的访问路径
 #server.servlet.context-path=/test
 spring.messages.basename=i18n.login
+spring.mvc.hiddenmethod.filter.enabled=true
